--- a/src/main/resources/fxml/start.fxml
+++ b/src/main/resources/fxml/start.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -116,6 +117,7 @@
                   <Insets left="10.0" right="10.0" />
                </HBox.margin>
             </TextField>
+            <RadioButton fx:id="stFirstHome" mnemonicParsing="false" selected="true" text="Home" />
             <Label alignment="CENTER_RIGHT" layoutX="128.0" layoutY="17.0" prefWidth="80.0" text="Opponent ID">
                <HBox.margin>
                   <Insets left="10.0" right="10.0" />
@@ -126,6 +128,7 @@
                   <Insets left="10.0" right="10.0" />
                </HBox.margin>
             </TextField>
+            <RadioButton fx:id="stSecondHome" layoutX="281.0" layoutY="16.0" mnemonicParsing="false" text="Home" />
          </children>
       </HBox>
       <HBox alignment="CENTER" layoutX="230.0" layoutY="283.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
