--- a/src/main/resources/fxml/start.fxml
+++ b/src/main/resources/fxml/start.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.gwu.ai.codeknights.tictactoe.gui.controller.StartController">
+<AnchorPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.gwu.ai.codeknights.tictactoe.gui.controller.StartController">
    <children>
       <AnchorPane layoutX="-23.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -78,7 +78,7 @@
             </HBox>
          </children>
       </AnchorPane>
-      <Button fx:id="stStart" layoutX="266.0" layoutY="328.0" mnemonicParsing="false" onAction="#startHandler" styleClass="danger" text="START" />
+      <Button fx:id="stStart" layoutX="266.0" layoutY="415.0" mnemonicParsing="false" onAction="#startHandler" styleClass="danger" text="START" />
       <Label layoutX="268.0" layoutY="128.0" text="Board Setting" />
       <HBox alignment="CENTER" layoutY="155.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
@@ -145,7 +145,27 @@
             </TextField>
          </children>
       </HBox>
-      <HBox alignment="CENTER" layoutX="286.0" layoutY="369.431640625" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <HBox alignment="CENTER" layoutY="333.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <children>
+            <Label alignment="CENTER_RIGHT" prefWidth="50.0" text="userId">
+               <HBox.margin>
+                  <Insets right="20.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="stUserId" prefWidth="150.0" promptText="N/A">
+               <HBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </HBox.margin>
+            </TextField>
+            <Label alignment="CENTER_RIGHT" layoutX="210.0" layoutY="17.0" prefWidth="50.0" text="key">
+               <HBox.margin>
+                  <Insets right="20.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="stKey" layoutX="310.0" layoutY="10.0" prefWidth="150.0" promptText="N/A" />
+         </children>
+      </HBox>
+      <HBox alignment="CENTER" layoutY="457.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
             <Text fx:id="stErr" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" />
          </children>
