--- a/src/main/resources/fxml/start.fxml
+++ b/src/main/resources/fxml/start.fxml
@@ -78,7 +78,7 @@
             </HBox>
          </children>
       </AnchorPane>
-      <Button fx:id="stStart" layoutX="266.0" layoutY="415.0" mnemonicParsing="false" onAction="#startHandler" styleClass="danger" text="START" />
+      <Button fx:id="stStart" layoutX="200.0" layoutY="415.0" mnemonicParsing="false" onAction="#startHandler" styleClass="danger" text="START" />
       <Label layoutX="268.0" layoutY="128.0" text="Board Setting" />
       <HBox alignment="CENTER" layoutY="155.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
@@ -170,5 +170,6 @@
             <Text fx:id="stErr" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" />
          </children>
       </HBox>
+      <Button fx:id="stSpectate" layoutX="352.0" layoutY="415.0" mnemonicParsing="false" onAction="#spectateHandler" styleClass="danger" text="Spectate" />
    </children>
 </AnchorPane>
